--- a/style.css
+++ b/style.css
@@ -199,51 +199,128 @@ body {
     height: 150px;
     flex-shrink: 0;
 }
-.newsletter .news-text{
+
+.newsletter .news-text {
     color: #070211;
-text-align: center;
-font-family: Merriweather;
-font-size: 48px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
-text-transform: capitalize;
-position: absolute;
-padding-left: 450px;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    position: absolute;
+    padding-left: 450px;
 
 
 }
-.description{
+
+.description {
     color: rgba(7, 2, 17, 0.60);
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 160% */
-width: 896px;
-margin-top: 150px;
-margin-left: 240px;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    /* 160% */
+    width: 896px;
+    margin-top: 150px;
+    margin-left: 240px;
 }
-#email{
-    width: 648px;
-height: 72px;
-flex-shrink: 0;
-border-radius: 50px;
-background: #FFF;
-font-size: 24px;
-padding-left: 20px;
-justify-content: center;
-margin-left: 130px;
-}
-#subscribe{
-    width: 210px;
-height: 72px;
-flex-shrink: 0;
-border-radius: 0px 50px 50px 0px;
-background: #F00;
-font-size: 24px;
-color: #FFF;
-margin-right: 190px;
 
+#email {
+    width: 648px;
+    height: 72px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: #FFF;
+    font-size: 24px;
+    padding-left: 20px;
+    justify-content: center;
+    margin-left: 130px;
+}
+
+button {
+    width: 210px;
+    height: 72px;
+    flex-shrink: 0;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    font-size: 24px;
+    color: #FFF;
+    border: none;
+    margin-right: 350px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 100px;
+
+}
+
+.subscription {
+    display: flex;
+    position: relative;
+}
+
+input {
+    border: none;
+}
+
+.footer-sect {
+    width: 1320px;
+    height: 609px;
+    flex-shrink: 0;
+    background: #070211;
+    margin-left: 110px;
+
+}
+
+.foot-text {
+    top: 40%;
+    left: 40%;
+    display: flex;
+}
+
+.address{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+    /* 166.667% */
+ 
+    padding-top: 120px;
+    padding-left: 140px;
+    padding-bottom: 409px;
+    width: 375px;
+    height: 80px;
+}
+
+
+.contacts img {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+    padding-top: 150px;
+    padding-left: 300px;
+    padding-bottom: 409px;
+}
+#number{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px; /* 166.667% */
+    
+    padding-top: 115px;
+    padding-left: 20px;
+    padding-bottom: 600px;
+    width: 195px;
+    height: 40px;
+}
+.contacts{
+    display: flex;
 }
